--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,1 +1,12 @@
-{ "extends": "@tsconfig/next/tsconfig.json", "compilerOptions": { "plugins": [{ "name": "next" }] }, "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"], "exclude": ["node_modules"] }
+{
+  "extends": "@tsconfig/next/tsconfig.json",
+  "compilerOptions": {
+    "plugins": [{ "name": "next" }],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  },
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "exclude": ["node_modules"]
+}
