--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.400.0",
-    "next": "14.2.5",
+    "next": "^16.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.6.0",
