--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,5 @@
 {
   "buildCommand": "cd frontend && npm run build",
-  "devCommand": "cd frontend && npm run dev",
-  "installCommand": "npm install",
-  "framework": "nextjs",
+  "installCommand": "cd frontend && npm install",
   "outputDirectory": "frontend/.next"
 }
