--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.6.1",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.2",
