--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,3 +1,6 @@
 {
-  "framework": "nextjs"
+  "buildCommand": "npm install && npm run build",
+  "outputDirectory": ".next",
+  "framework": "nextjs",
+  "installCommand": "npm install"
 }
