🔥 Update: Manifest & Render config pour Moto

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "EZONGA - Tokokota na mboka na biso moko",
-  "short_name": "EZONGA",
-  "description": "Application de rencontre pour la communauté congolaise",
+  "name": "MOTO 🔥 - Pesa ngai moto",
+  "short_name": "Moto",
+  "description": "L'application de rencontre qui met le feu à vos connexions - Moto ya bolingo",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#ec4899",
+  "background_color": "#000000",
+  "theme_color": "#ff4500",
   "orientation": "portrait-primary",
   "categories": ["social", "lifestyle"],
   "lang": "fr",
