--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -1,17 +1,15 @@
 services:
   - type: web
-    name: ezonga-backend
-    runtime: node
-    region: oregon
+    name: moto-api
+    env: node
+    region: frankfurt
     plan: free
-    buildCommand: npm install && npm run build
-    startCommand: npm start
+    buildCommand: cd backend && npm install && npx prisma generate
+    startCommand: cd backend && npm start
     envVars:
-      - key: NODE_ENV
-        value: production
-      - key: PORT
-        value: 10000
       - key: DATABASE_URL
-        sync: false 
+        sync: false
       - key: JWT_SECRET
         generateValue: true
+      - key: NODE_ENV
+        value: production
